the zooming out issue hasn't been fixed however now there's command cards for every servant and displays the proper cards
Next steps: Fix Ascension.js it has/does too much stuff at once that's making it really difficult to maintin

--- a/src/Style/ServantPage.css
+++ b/src/Style/ServantPage.css
@@ -1,5 +1,5 @@
 /* ServantPage.js CSS */
-.characterBanner{
+.character-banner{
     padding: 20px;
     margin: 30px;
     background-color: lightgray;
@@ -11,43 +11,44 @@
     
   }
   
-  .pictureContainer{
-    padding: 10px 20px;
-    margin: 10px 30px 10px 10px;
-    border-radius: 8px;
-    background-color: darkgray;
-  
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  /*going to need to use this for responsive design*/
-  .rarity-stars{
-    font-size: 24px;
-  }
-  
-  .ascensionButton{
-    margin-right: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
-    border-radius: 4px;
-    cursor: pointer;
-    border: none;
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  
-  .ascensionButton:hover{
-    background-color: #e0e0e0;
-  }
-  
-  .ascensionButton.active{
-    background-color: rgb(4, 4, 140);
-    color: white;
-  }
-  
-  .ascensionPicture{
-    width: 100%;
-  }
+.picture-container{
+  padding: 10px 20px;
+  margin: 10px 30px 10px 10px;
+  border-radius: 8px;
+  background-color: darkgray;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.ascension-picture{
+  width: 100%;
+}
+
+/*going to need to use this for responsive design*/
+.rarity-stars{
+  font-size: 24px;
+}
+
+.ascension-button{
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.ascension-button:hover{
+  background-color: #e0e0e0;
+}
+
+.ascension-button.active{
+  background-color: rgb(4, 4, 140);
+  color: white;
+}
+
